# chemllm

./: .gitignore  README.md  main.py  prompts.py  pyproject.toml  test_decimer.py  test_get_chem_info.py  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
exports/: amino_acids_grid.sdf  compounds_with_cas.sdf  extracted_compound.sdf  grid_layout.sdf  single_mol_file.sdf
functions/: adv_response.py  call_function.py  chem_discovery.py  chem_file_utils.py  chem_files.py  chem_grids.py  chem_reactions.py  function_declaration.py  get_chem_info.py  get_file_content.py  get_response.py  run_python_file.py  write_file.py
functions/chem_tools/: chem_discovery.py  chem_file_utils.py  chem_files.py  chem_grids.py  chem_reactions.py  get_chem_info.py  visual_tool.py
functions/file_tools/: csv_tools.py  get_files_info.py
functions/lit_tools/: lit_tools.py
input_files/: single_mol_file.cdxml  single_mol_file.sdf
inter_ui/: acc_signup.py  app.py  auth.py  chat_ui.py  sidebar.py  top_bar.py
modules/: author.py
